# KafkaEventDriven

./: .env-template  .gitignore  README.MD  alerts.yml  docker-compose.yml  grafana_dashboard.json  prometheus.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 4a46ea9eb623_base_migration.py
src/: main.py  server_logger.py
src/api/: __init__.py  metrics.py  producer.py
src/config/: settings.py
src/consumers/: __init__.py  analytics_consumer.py  base_consumer.py  raw_consumer.py
src/models/: __init__.py  analytics.py  base.py  db_helper.py  event.py
src/services/: clickhouse.py  kafka.py  metrics.py  redis_store.py
